# financial-nomad-web

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONFIGURACION_DOCKER_ACTUAL.md  README_CONFIGURACION.md  SETUP_FIRESTORE.md  actualizar_client_id.sh  arquitectura_general.md  configurar_auth.md  crear_google_oauth_rapido.md  docker-compose.dev.yml  firebase.json  firestore.indexes.json  firestore.rules  implementation_strategy.md  restart_docker.sh
.github/workflows/: ci-cd.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Dockerfile.production  README.md  cloudbuild.yaml  cloudrun-service.yaml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt
backend/.github/workflows/: quality.yml  test.yml
backend/devops/production/: Dockerfile.production  README.md  autoscaling.yaml  backup-firestore.sh  backup-strategy.md  cloudbuild.yaml  deploy.sh  monitoring.yaml  setup-autoscaling.sh  setup-monitoring.sh
backend/devops/production/terraform/: main.tf  terraform.tfvars.example
backend/docs/: DEPLOYMENT.md
backend/scripts/: deploy-production.sh  dev_setup.sh  init_database.py  init_db.sh  quick-deploy.sh  run_tests.sh  setup_firestore.py  start_firestore_emulator.sh  validate-deployment.sh  verify_structure.py
backend/src/: config.py  main.py
backend/src/infrastructure/: __init__.py  firestore.py
backend/src/middleware/: error_handler.py  logging.py  monitoring.py  rate_limiting.py  security.py
backend/src/models/: __init__.py  api_responses.py  asana.py  auth.py  backup.py  base.py  financial.py  import_models.py
backend/src/routers/: accounts.py  admin_tools.py  analytics.py  asana.py  audit.py  auth.py  backup_export.py  budgets.py  business_intelligence.py  cache.py  categories.py  feature_flags.py  frontend.py  graphql.py  health.py  import_export.py  migrations.py  monitoring.py  notifications.py  performance.py  recurring_transactions.py  reports.py  resilience.py  transactions.py  webhooks.py
backend/src/services/: __init__.py  account.py  asana_integration.py  asana_sync.py  audit_service.py  auth.py  backup.py  budget.py  business_metrics.py  cache_service.py  caching.py  category.py  circuit_breaker.py  drive_integration.py  export.py  fault_tolerance.py  feature_flags.py  graphql_service.py  import_service.py  migration_service.py  notification_service.py  predictive_analysis_service.py  query_optimizer.py  recurring_transaction.py  report_service.py  scheduler.py  transaction.py  webhook_service.py
backend/src/utils/: constants.py  dependencies.py  exceptions.py  validators.py
backend/tests/: conftest.py
backend/tests/factories/: __init__.py  financial_factory.py  user_factory.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_config.py  test_main.py
backend/tests/unit/middleware/: test_monitoring.py
backend/tests/unit/services/: test_backup_service.py  test_caching_service.py
backend/tests/unit/utils/: test_exceptions.py  test_validators.py
devops/: README.md
devops/docker-compose/: docker-compose.dev.yml  docker-compose.test.yml
devops/firebase/: firebase.json  firestore.indexes.json  firestore.rules
devops/nginx/: dev.conf
devops/scripts/: README.md  (+10 more)
documentation/: documentacion_funcional.md  project_overview.md
frontend/: .env.example  .eslintrc.json  .gitignore  README.md  angular.json  karma.conf.js  ngsw-config.json  package-lock.json  package.json  tsconfig.json
(+85 files in other folders)
